# gogdl-cli

./: Cargo.toml  README.md
src/: cli.rs  commands.rs  main.rs  secret.rs  settings.rs
src/commands/: download.rs  games.rs  login.rs  management.rs  proton.rs
