[package]
name = "gogdl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
gogdl-lib = { version = "0.1.0", git = "https://github.com/fernandonr189/gogdl-lib.git", tag = "v0.1.0" }
open = "5.3.3"
secret-service = { version = "5.1.0", features = ["rt-tokio-crypto-rust"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
