[package]
name = "gogdl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0.0"
gogdl-lib = { version = "0.1.0", git = "https://github.com/fernandonr189/gogdl-lib.git", tag = "v0.1.1" }
open = "5.3.3"
prefix-manager = { version = "0.1.0", path = "../prefix-manager" }
secret-service = { version = "5.1.0", features = ["rt-tokio-crypto-rust"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
